[gd_scene load_steps=4 format=3 uid="uid://c5eyakp750oyj"]

[ext_resource type="Script" uid="uid://yd0wj7u7wdsd" path="res://scripts/Network/muliplayer_ui.gd" id="1_6dpoq"]
[ext_resource type="Shader" uid="uid://bu6gmyxs71e2l" path="res://scripts/shader/blur.gdshader" id="1_7d8ui"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6dpoq"]
shader = ExtResource("1_7d8ui")
shader_parameter/amount = 1.48400007049

[node name="MuliplayerUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_6dpoq")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_6dpoq")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2971.5
offset_top = -1053.5
offset_right = 2971.5
offset_bottom = 1053.5
grow_horizontal = 2
grow_vertical = 2

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="confirmation_dialog" type="Label" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -183.0
offset_top = -404.5
offset_right = 183.0
offset_bottom = -373.5
grow_horizontal = 2
grow_vertical = 2
text = "                 "
horizontal_alignment = 1

[node name="STATUS" type="Label" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -183.0
offset_top = -210.0
offset_right = 183.0
offset_bottom = -179.0
grow_horizontal = 2
grow_vertical = 2
text = "                 "
horizontal_alignment = 1

[node name="Client" type="Button" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -68.0
offset_top = 71.0
offset_right = 62.0
offset_bottom = 132.0
grow_horizontal = 2
grow_vertical = 2
text = "Client
"

[node name="Server" type="Button" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.0
offset_top = -138.0
offset_right = 65.0
offset_bottom = -77.0
grow_horizontal = 2
grow_vertical = 2
text = "SERVER"

[node name="Exit" type="Button" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -65.0
offset_top = -61.0
offset_right = 65.0
grow_horizontal = 2
grow_vertical = 0
text = "EXIT"

[node name="Multiplayer" type="Label" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -352.0
offset_top = -316.0
offset_right = 359.0
offset_bottom = -288.0
grow_horizontal = 2
grow_vertical = 2
text = "MULIPLAYER"
horizontal_alignment = 1

[connection signal="pressed" from="CanvasLayer/Client" to="." method="_on_client_pressed"]
[connection signal="pressed" from="CanvasLayer/Server" to="." method="_on_server_pressed"]
[connection signal="pressed" from="CanvasLayer/Exit" to="." method="_on_exit_pressed"]
